compiler-core/src/luau/tests/snapshots/gleam_core__luau__tests__assert__assert_binary_operation.snap
---
source: compiler-core/src/luau/tests/assert.rs
expression: "\npub fn eq(a, b) {\n  assert a == b\n}\n"
---
----- SOURCE CODE

pub fn eq(a, b) {
  assert a == b
}


----- COMPILED LUAU
local _gleam = require("../gleam")

local function eq(a, b)
  if not (_gleam.isEqual(a, b)) then
    error("Assertion failed")
  end
end

return {
  eq = eq
}
